Добавляет вёрстку блока с преимуществами (все версии)

--- a/source/index.html
+++ b/source/index.html
@@ -66,10 +66,45 @@
           <picture>
             <source media="(max-width: 767px)" srcset="img/bg-triangle-main-mobile.svg">
             <source media="(max-width: 1023px)" srcset="img/bg-triangle-main-tablet.svg">
-            <img class="main-screen__bg-img" src="img/bg-triangle-main.svg" alt="Изображение декоративных треугольников" width="1920" height="881">
+            <img class="main-screen__bg-img" src="img/bg-triangle-main-desktop.svg" alt="Изображение декоративных треугольников" width="1920" height="881">
           </picture>
         </div>
       </div>
+    </section>
+    <section class="advantages">
+      <h3 class="visually-hidden">Блок с преимуществами</h3>
+      <ul class="advantages__list">
+        <li class="advantages__item">
+          <svg class="advantages__icon" xmlns="http://www.w3.org/2000/svg" width="29" height="35">
+            <use xlink:href="#icon-stopwatch"></use>
+          </svg>
+          <h4 class="advantages__title">Оперативные сроки </h4>
+          <p class="advantages__text">Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки</p>
+        </li>
+        <li class="advantages__item">
+          <svg class="advantages__icon" xmlns="http://www.w3.org/2000/svg" width="35" height="35">
+            <use xlink:href="#icon-hired"></use>
+          </svg>
+          <h4 class="advantages__title">Крупные поставщики</h4>
+          <p class="advantages__text">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.
+</p>
+        </li>
+        <li class="advantages__item">
+          <svg class="advantages__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="31">
+            <use xlink:href="#icon-detective"></use>
+          </svg>
+          <h4 class="advantages__title">Полная конфиденциальность</h4>
+          <p class="advantages__text">По желанию клиента  мы обеспечиваем полную конфеденциальность.
+</p>
+        </li>
+        <li class="advantages__item">
+          <svg class="advantages__icon" xmlns="http://www.w3.org/2000/svg" width="35" height="35">
+            <use xlink:href="#icon-tag"></use>
+          </svg>
+          <h4 class="advantages__title">Персонализация стоимости</h4>
+          <p class="advantages__text">Мы  подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.      </p>
+        </li>
+      </ul>
     </section>
   </main>
   <footer class="main-footer">
