--- a/source/index.html
+++ b/source/index.html
@@ -62,7 +62,7 @@
             <source media="(max-width: 767px)" srcset="img/circuits-mobile.png">
             <source media="(max-width: 1023px)" srcset="img/circuits-tablet.png">
             <img class="main-screen__img" src="img/circuits-desktop.png" width="705" height="515" alt="Изображение печатных плат" loading="lazy">
-            </picture>
+          </picture>
           <picture>
             <source media="(max-width: 767px)" srcset="img/bg-triangle-main-mobile.svg">
             <source media="(max-width: 1023px)" srcset="img/bg-triangle-main-tablet.svg">
@@ -87,24 +87,33 @@
           </svg>
           <h4 class="advantages__title">Крупные поставщики</h4>
           <p class="advantages__text">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.
-</p>
+          </p>
         </li>
         <li class="advantages__item">
           <svg class="advantages__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="31">
             <use xlink:href="#icon-detective"></use>
           </svg>
           <h4 class="advantages__title">Полная конфиденциальность</h4>
-          <p class="advantages__text">По желанию клиента  мы обеспечиваем полную конфеденциальность.
-</p>
+          <p class="advantages__text">По желанию клиента мы обеспечиваем полную конфеденциальность.
+          </p>
         </li>
         <li class="advantages__item">
           <svg class="advantages__icon" xmlns="http://www.w3.org/2000/svg" width="35" height="35">
             <use xlink:href="#icon-tag"></use>
           </svg>
           <h4 class="advantages__title">Персонализация стоимости</h4>
-          <p class="advantages__text">Мы  подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.      </p>
+          <p class="advantages__text">Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает. </p>
         </li>
       </ul>
+    </section>
+    <section class="about-company">
+      <img class="about-company__img" src="img/about-year-2005.png" width="220" height="317" alt="Изображение года основания">
+      <div class="about-company__wrapper">
+        <h3 class="about-company__title">О компании</h3>
+        <p class="about-company__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
+        <p class="about-company__text">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог (РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</p>
+        <a class="about-company__btn" href="#">Подробнее</a>
+      </div>
     </section>
   </main>
   <footer class="main-footer">
