Добавляет вёрстку блока товаров и услуг (все версии)

--- a/source/index.html
+++ b/source/index.html
@@ -115,6 +115,43 @@
         <a class="about-company__btn" href="#">Подробнее</a>
       </div>
     </section>
+    <section class="goods">
+      <div class="goods__wrapper">
+        <h3 class="goods__title">Service Device предлагает следующие товары и услуги</h3>
+        <ul class="goods__list">
+          <li class="goods__item">
+            <a class="goods__link" href="#">
+            <h4 class="goods__name">Производство печатных плат</h4>
+            <div class="goods__btn">
+              <span class="visually-hidden">Перейти к категории</span>
+              <svg class="goods__arrow" xmlns="http://www.w3.org/2000/svg" width="4" height="8">
+                <use xlink:href="#icon-arrow"></use>
+              </svg>
+            </div>
+          </li>
+          <li class="goods__item">
+            <a class="goods__link" href="#">
+            <h4 class="goods__name">Монтаж печатныx плат</h4>
+            <div class="goods__btn">
+              <span class="visually-hidden">Перейти к категории</span>
+              <svg class="goods__arrow" xmlns="http://www.w3.org/2000/svg" width="4" height="8">
+                <use xlink:href="#icon-arrow"></use>
+              </svg>
+            </div>
+          </li>
+          <li class="goods__item">
+            <a class="goods__link" href="#">
+            <h4 class="goods__name">Комплектующие для светотехники</h4>
+            <div class="goods__btn">
+              <span class="visually-hidden">Перейти к категории</span>
+              <svg class="goods__arrow" xmlns="http://www.w3.org/2000/svg" width="4" height="8">
+                <use xlink:href="#icon-arrow"></use>
+              </svg>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer class="main-footer">
     <div class="main-footer__upper-part-wrapper">
