Добавляет вёрстку блока формы обратной связи (все версии)

--- a/source/index.html
+++ b/source/index.html
@@ -121,35 +121,62 @@
         <ul class="goods__list">
           <li class="goods__item">
             <a class="goods__link" href="#">
-            <h4 class="goods__name">Производство печатных плат</h4>
-            <div class="goods__btn">
-              <span class="visually-hidden">Перейти к категории</span>
-              <svg class="goods__arrow" xmlns="http://www.w3.org/2000/svg" width="4" height="8">
-                <use xlink:href="#icon-arrow"></use>
-              </svg>
-            </div>
+              <h4 class="goods__name">Производство печатных плат</h4>
+              <div class="goods__btn">
+                <span class="visually-hidden">Перейти к категории</span>
+                <svg class="goods__arrow" xmlns="http://www.w3.org/2000/svg" width="4" height="8">
+                  <use xlink:href="#icon-arrow"></use>
+                </svg>
+              </div>
           </li>
           <li class="goods__item">
             <a class="goods__link" href="#">
-            <h4 class="goods__name">Монтаж печатныx плат</h4>
-            <div class="goods__btn">
-              <span class="visually-hidden">Перейти к категории</span>
-              <svg class="goods__arrow" xmlns="http://www.w3.org/2000/svg" width="4" height="8">
-                <use xlink:href="#icon-arrow"></use>
-              </svg>
-            </div>
+              <h4 class="goods__name">Монтаж печатныx плат</h4>
+              <div class="goods__btn">
+                <span class="visually-hidden">Перейти к категории</span>
+                <svg class="goods__arrow" xmlns="http://www.w3.org/2000/svg" width="4" height="8">
+                  <use xlink:href="#icon-arrow"></use>
+                </svg>
+              </div>
           </li>
           <li class="goods__item">
             <a class="goods__link" href="#">
-            <h4 class="goods__name">Комплектующие для светотехники</h4>
-            <div class="goods__btn">
-              <span class="visually-hidden">Перейти к категории</span>
-              <svg class="goods__arrow" xmlns="http://www.w3.org/2000/svg" width="4" height="8">
-                <use xlink:href="#icon-arrow"></use>
-              </svg>
-            </div>
+              <h4 class="goods__name">Комплектующие для светотехники</h4>
+              <div class="goods__btn">
+                <span class="visually-hidden">Перейти к категории</span>
+                <svg class="goods__arrow" xmlns="http://www.w3.org/2000/svg" width="4" height="8">
+                  <use xlink:href="#icon-arrow"></use>
+                </svg>
+              </div>
           </li>
         </ul>
+      </div>
+    </section>
+    <section class="form">
+      <div class="form__bg-wrap">
+        <img class="form__img" src="img/form-paper-airplane.png" width="511" height="288" alt="Изображение бумажного самолётика">
+        <form class="form__form">
+          <h3 class="form__title">Остались вопросы? Задайте их нам!</h3>
+          <p class="form__text">Мы проконсультируем Вас бесплатно</p>
+          <div class="form__upper-wrapper">
+            <div class="form__name-wrap">
+              <input type="text" name="" placeholder="Имя">
+            </div>
+            <div class="form__tel-wrap">
+              <input type="tel" name="" placeholder="Телефон">
+            </div>
+          </div>
+          <div class="form__textarea-wrap">
+            <textarea placeholder="Ваш вопрос"></textarea>
+          </div>
+          <div class="form__lower-wrapper">
+            <button type="submit">Задать вопрос</button>
+            <div class="form__checkbox-wrap">
+              <input type="checkbox" name="personal-data" id="personal-data" checked>
+              <label tabindex="0" for="personal-data">Я согласен на обработку персональных данных</label>
+            </div>
+          </div>
+        </form>
       </div>
     </section>
   </main>
