--- a/source/index.html
+++ b/source/index.html
@@ -172,8 +172,8 @@
           <div class="form__lower-wrapper">
             <button type="submit">Задать вопрос</button>
             <div class="form__checkbox-wrap">
-              <input type="checkbox" name="personal-data" id="personal-data" checked>
-              <label tabindex="0" for="personal-data">Я согласен на обработку персональных данных</label>
+              <input type="checkbox" name="form-personal-data" id="personal-data" checked>
+              <label tabindex="0" for="form-personal-data">Я согласен на обработку персональных данных</label>
             </div>
           </div>
         </form>
@@ -289,6 +289,35 @@
       </ul>
     </div>
   </footer>
+  <section class="feedback">
+    <div class="feedback__bg-wrap">
+      <button class="feedback__close-btn" type="button">
+        <svg class="feedback__close-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16">
+          <use xlink:href="#icon-close"></use>
+        </svg>
+        <span class="visually-hidden">Закрыть</span>
+      </button>
+      <form class="feedback__form">
+        <h3 class="feedback__title">Закажите звонок</h3>
+        <p class="feedback__text">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
+        <div class="feedback__name-wrap">
+          <input type="text" name="" placeholder="Имя">
+        </div>
+        <div class="feedback__tel-wrap">
+          <input type="tel" name="" placeholder="Телефон">
+        </div>
+        <div class="feedback__textarea-wrap">
+          <textarea placeholder="Ваш вопрос"></textarea>
+        </div>
+        <button class="feedback__btn" type="submit">Отправить</button>
+        <div class="feedback__checkbox-wrap">
+          <input type="checkbox" name="personal-data" id="feedback-personal-data" checked>
+          <label tabindex="0" for="feedback-personal-data">Я согласен на обработку персональных данных</label>
+        </div>
+      </form>
+    </div>
+  </section>
+  <div class="overlay"></div>
 </body>
 
 </html>
