--- a/source/index.html
+++ b/source/index.html
@@ -163,7 +163,7 @@
               <input type="text" name="" placeholder="Имя">
             </div>
             <div class="form__tel-wrap">
-              <input type="tel" name="" placeholder="Телефон">
+              <input type="tel" name="" placeholder="Телефон" pattern="(\+7\s\([0-9]{3}\)\s[0-9]{3}\s[0-9]{4}){1}" required>
             </div>
           </div>
           <div class="form__textarea-wrap">
@@ -303,7 +303,7 @@
           <input type="text" name="username" placeholder="Имя" autofocus>
         </div>
         <div class="feedback__tel-wrap">
-          <input type="tel" name="telephone" placeholder="Телефон">
+          <input type="tel" name="telephone" placeholder="Телефон" pattern="(\+7\s\([0-9]{3}\)\s[0-9]{3}\s[0-9]{4}){1}" required>
         </div>
         <div class="feedback__textarea-wrap">
           <textarea name="question" placeholder="Ваш вопрос"></textarea>
