Частично исправляет валидацию формы

--- a/source/index.html
+++ b/source/index.html
@@ -303,7 +303,7 @@
           <input type="text" name="username" placeholder="Имя" autofocus>
         </div>
         <div class="feedback__tel-wrap">
-          <input type="tel" name="telephone" placeholder="Телефон" pattern="(\+7\s\([0-9]{3}\)\s[0-9]{3}\s[0-9]{4}){1}" required>
+          <input type="tel" name="telephone" placeholder="Телефон" pattern="(\+7\s\(\d{3}\)\s\d{3}\s\d{4}){1}" required>
         </div>
         <div class="feedback__textarea-wrap">
           <textarea name="question" placeholder="Ваш вопрос"></textarea>
