--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
   </div>
   <header class="main-header">
     <div class="main-header__logo-wrapper">
-      <a href="#logo-image" class="main-header__logo logo">
+      <a class="main-header__logo logo">
         <picture>
           <source media="(max-width: 767px)" srcset="img/logo-circuit-mobile.svg">
           <img class="logo__image" src="img/logo-circuit.svg" width="52" height="52" alt="Логотип Smart Device">
@@ -63,14 +63,10 @@
             <source media="(max-width: 1023px)" srcset="img/circuits-tablet.png">
             <img class="main-screen__img" src="img/circuits-desktop.png" width="705" height="515" alt="Изображение печатных плат" loading="lazy">
           </picture>
-          <picture>
-            <source media="(max-width: 767px)" srcset="img/bg-triangle-main-mobile.svg">
-            <source media="(max-width: 1023px)" srcset="img/bg-triangle-main-tablet.svg">
-            <img class="main-screen__bg-img" src="img/bg-triangle-main-desktop.svg" alt="Изображение декоративных треугольников" width="1920" height="881">
-          </picture>
         </div>
       </div>
     </section>
+    <div class="advantages-and-about-company-wrapper">
     <section class="advantages" id="advantages">
       <h3 class="visually-hidden">Блок с преимуществами</h3>
       <ul class="advantages__list">
@@ -94,7 +90,7 @@
             <use xlink:href="#icon-detective"></use>
           </svg>
           <h4 class="advantages__title">Полная конфиденциальность</h4>
-          <p class="advantages__text">По желанию клиента мы обеспечиваем полную конфеденциальность.
+          <p class="advantages__text">По желанию клиента&emsp;мы обеспечиваем полную конфеденциальность.
           </p>
         </li>
         <li class="advantages__item">
@@ -102,7 +98,7 @@
             <use xlink:href="#icon-tag"></use>
           </svg>
           <h4 class="advantages__title">Персонализация стоимости</h4>
-          <p class="advantages__text">Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает. </p>
+          <p class="advantages__text">Мы&emsp;подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает. </p>
         </li>
       </ul>
     </section>
@@ -115,11 +111,12 @@
         <a class="about-company__btn" href="#">Подробнее</a>
       </div>
     </section>
+  </div>
     <section class="goods">
       <div class="goods__wrapper">
         <h3 class="goods__title">Service Device предлагает следующие товары и услуги</h3>
         <ul class="goods__list">
-          <li class="goods__item">
+          <li class="goods__item" data-number="1">
             <a class="goods__link" href="#">
               <h4 class="goods__name">Производство печатных плат</h4>
               <div class="goods__btn">
@@ -129,7 +126,7 @@
                 </svg>
               </div>
           </li>
-          <li class="goods__item">
+          <li class="goods__item" data-number="2">
             <a class="goods__link" href="#">
               <h4 class="goods__name">Монтаж печатныx плат</h4>
               <div class="goods__btn">
@@ -139,7 +136,7 @@
                 </svg>
               </div>
           </li>
-          <li class="goods__item">
+          <li class="goods__item" data-number="3">
             <a class="goods__link" href="#">
               <h4 class="goods__name">Комплектующие для светотехники</h4>
               <div class="goods__btn">
@@ -163,7 +160,7 @@
               <input type="text" name="" placeholder="Имя">
             </div>
             <div class="form__tel-wrap">
-              <input type="tel" name="" placeholder="Телефон" pattern="(\+7\s\([0-9]{3}\)\s[0-9]{3}\s[0-9]{4}){1}" required>
+              <input type="tel" name="" placeholder="Телефон" pattern="(\+7\([0-9]{3}\)[0-9]{3}[0-9]{4})" required>
             </div>
           </div>
           <div class="form__textarea-wrap">
@@ -185,7 +182,7 @@
       <h3 class="visually-hidden">Upper footer</h3>
       <div class="main-footer__logo-social-wrapper">
         <div class="main-footer__logo-wrapper">
-          <a href="#logo-image" class="main-footer__logo logo">
+          <a class="main-footer__logo logo">
             <img class="logo__image" src="img/logo-circuit.svg" width="52" height="52" alt="Логотип Smart Device">
             <div class="logo__text-wrapper">
               <p class="logo__maintext logo__maintext--footer">Service Device</p>
@@ -273,16 +270,16 @@
     </div>
     <div class="main-footer__lower-part-wrapper">
       <ul class="main-footer__info-list">
-        <li class="main-footer__info-item">
+        <li class="main-footer__info-item" data-footer-number="1">
           <p class="main-footer__info-text">Все права защищены</p>
         </li>
-        <li class="main-footer__info-item">
+        <li class="main-footer__info-item" data-footer-number="2">
           <p class="main-footer__info-text">1999-2018 SD Service Devices</p>
         </li>
-        <li class="main-footer__info-item">
+        <li class="main-footer__info-item" data-footer-number="3">
           <a class="main-footer__info-text main-footer__info-text--link" href="#policy">Условия конфиденциальности</a>
         </li>
-        <li class="main-footer__info-item">
+        <li class="main-footer__info-item" data-footer-number="4">
           <p class="main-footer__info-text">Developed by wow studio </p>
         </li>
       </ul>
