--- a/source/index.html
+++ b/source/index.html
@@ -133,6 +133,7 @@
                   <use xlink:href="#icon-arrow"></use>
                 </svg>
               </div>
+            </a>
           </li>
           <li class="goods__item" data-number="2">
             <a class="goods__link" href="#">
@@ -143,6 +144,7 @@
                   <use xlink:href="#icon-arrow"></use>
                 </svg>
               </div>
+            </a>
           </li>
           <li class="goods__item" data-number="3">
             <a class="goods__link" href="#">
@@ -153,6 +155,7 @@
                   <use xlink:href="#icon-arrow"></use>
                 </svg>
               </div>
+            </a>
           </li>
         </ul>
       </div>
@@ -165,10 +168,10 @@
           <p class="form__text">Мы проконсультируем Вас бесплатно</p>
           <div class="form__upper-wrapper">
             <div class="form__name-wrap">
-              <input type="text" name="" placeholder="Имя">
+              <input type="text" name="user-name" placeholder="Имя">
             </div>
             <div class="form__tel-wrap">
-              <input type="tel" name="" placeholder="Телефон" pattern="(\+7\([0-9]{3}\)[0-9]{3}[0-9]{4})" required>
+              <input type="tel" name="user-phone" placeholder="Телефон" pattern="(\+7\([0-9]{3}\)[0-9]{3}[0-9]{4})" required>
             </div>
           </div>
           <div class="form__textarea-wrap">
@@ -177,7 +180,7 @@
           <div class="form__lower-wrapper">
             <button type="submit">Задать вопрос</button>
             <div class="form__checkbox-wrap">
-              <input type="checkbox" name="form-personal-data" id="personal-data" checked>
+              <input type="checkbox" name="personal-data" id="form-personal-data" checked>
               <label tabindex="0" for="form-personal-data">Я согласен на обработку персональных данных</label>
             </div>
           </div>
