Завершает работу с PP (мобильная версия). Добавляет некоторые исправления по критериям (&-селекторы)

--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
       <a class="main-header__logo logo">
         <picture>
           <source media="(max-width: 767px)" srcset="img/logo-circuit-mobile.svg">
-          <img class="logo__image" src="img/logo-circuit.svg" width="52" height="52" alt="Логотип Smart Device">
+          <img class="logo__image logo__image--header" src="img/logo-circuit.svg" width="52" height="52" alt="Логотип Smart Device">
         </picture>
         <div class="logo__text-wrapper">
           <p class="logo__maintext logo__maintext--header">Smart Device</p>
@@ -70,7 +70,7 @@
       <section class="advantages" id="advantages">
         <h3 class="visually-hidden">Блок с преимуществами</h3>
         <ul class="advantages__list">
-          <li class="advantages__item">
+          <li class="advantages__item" data-adv-item="1">
             <div class="advantages__icon-wrapper">
               <svg class="advantages__icon" xmlns="http://www.w3.org/2000/svg" width="29" height="35" data-icon-name="stopwatch">
                 <use xlink:href="#icon-stopwatch"></use>
@@ -79,7 +79,7 @@
             <h4 class="advantages__title">Оперативные сроки </h4>
             <p class="advantages__text">Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item" data-adv-item="2">
             <div class="advantages__icon-wrapper">
               <svg class="advantages__icon" xmlns="http://www.w3.org/2000/svg" width="35" height="35" data-icon-name="hired">
                 <use xlink:href="#icon-hired"></use>
@@ -89,7 +89,7 @@
             <p class="advantages__text">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.
             </p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item" data-adv-item="3">
             <div class="advantages__icon-wrapper">
               <svg class="advantages__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="31" data-icon-name="detective">
                 <use xlink:href="#icon-detective"></use>
@@ -99,7 +99,7 @@
             <p class="advantages__text">По желанию клиента&emsp;мы обеспечиваем полную конфеденциальность.
             </p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item" data-adv-item="4">
             <div class="advantages__icon-wrapper">
               <svg class="advantages__icon" xmlns="http://www.w3.org/2000/svg" width="35" height="35" data-icon-name="tag">
                 <use xlink:href="#icon-tag"></use>
